changed name to ysgoltrewen, added version 0.0.1

--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /*
-Theme Name: Cornerstone
-Theme URI: https://github.com/growdigital/cornerstone
+Theme Name: Ysgol Trewen
+Theme URI: https://github.com/growdigital/ysgoltrewen-wp
 Author: Jake Rayson
 Author URI: http://growdigital.org/
-Description: WordPress starter theme, modular CSS optimised with gulp, based on _s
-Version: 0.0.8
+Description: WordPress theme based on Cornerstone
+Version: 0.0.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: one-column, fluid-layout, responsive-layout
-Text Domain: cornerstone
+Text Domain: ysgoltrewen
 */
 
 /* Import CSS from processed & globbed CSS */
