--- a/src/modules/blocks/header/header.css
+++ b/src/modules/blocks/header/header.css
@@ -9,6 +9,14 @@
 .header {
 	background-color: var(--red);
 	color: white;
+	padding-top: 1.4rem;
+	text-align: center;
+}
+
+/* header logo 'size' is  width="130" height="125" */
+.header--logo {
+	display: inline-block;
+	width: 110px;
 }
 
 .header--logo:hover {
@@ -16,8 +24,8 @@
 }
 
 .header--name {
-	font-size: 3.7rem;
-	margin: 0;
+	font-size: 2.3rem;
+	margin-bottom: 0.4rem;
 }
 
 .header--name a,
@@ -32,5 +40,6 @@
 
 .header--desc {
 	font-weight: normal;
-	margin: 0;
+	line-height: 1.3;
+	margin-bottom: 0.6rem;
 }
