basic page styling for mobile

--- a/src/assets/css/settings/variables.css
+++ b/src/assets/css/settings/variables.css
@@ -12,6 +12,7 @@
   --yellow:     #ffb401;
   --green:      #14a93b;
   --grey_text:  #4a4a4a;
+  --grey_dark:  #222;
   --link:       #4a90e2;
   --link_visit: #61456a;
 
