--- a/src/assets/css/shame.css
+++ b/src/assets/css/shame.css
@@ -8,6 +8,10 @@
  */
 
 /* used on front-page, possibly for all main content areas */
-.main {
-	padding: 0.8rem 0.5rem;
+.container {
+	padding: 1rem 0.5rem;
+}
+
+.page img {
+	margin: 0 -0.5rem;
 }
