--- a/src/modules/blocks/header/header.css
+++ b/src/modules/blocks/header/header.css
@@ -9,7 +9,7 @@
 .header {
 	background-color: var(--red);
 	color: white;
-	padding-top: 1.4rem;
+	padding-top: 1.2rem;
 	text-align: center;
 }
 
@@ -25,7 +25,7 @@
 
 .header--name {
 	font-size: 2.3rem;
-	margin-bottom: 0.4rem;
+	margin-bottom: 0.6rem;
 }
 
 .header--name a,
@@ -39,7 +39,8 @@
 }
 
 .header--desc {
+	font-size: 1.1rem;
 	font-weight: normal;
 	line-height: 1.3;
-	margin-bottom: 0.6rem;
+	margin-bottom: 0.9rem;
 }
