--- a/src/modules/blocks/footer/footer.css
+++ b/src/modules/blocks/footer/footer.css
@@ -7,5 +7,30 @@
  */
 
 .footer {
+	background-color: var(--red);
+	color: white;
+	padding-bottom: 1rem;
+	text-align: center;
+}
 
+.footer a,
+.footer a:visited {
+	color: var(--yellow);
+	text-decoration: none;
+}
+
+.footer a:hover,
+.footer a:active {
+	color: white;
+	text-decoration: underline;
+}
+
+.footer__contact {
+	list-style-type: none;
+	margin: 0;
+	padding: 1rem 0;
+}
+
+.footer__contact > * {
+	line-height: 1.8;
 }
