added breakpoint, oh yes

--- a/src/assets/css/settings/responsive.css
+++ b/src/assets/css/settings/responsive.css
@@ -2,7 +2,7 @@
    Responsive media queries variables
    ========================================================================== */
 
-
+@custom-media --medium (width >= 45em);
 
 /*
 // Define custom breakpoint sizes
