--- a/src/modules/blocks/footer/footer.css
+++ b/src/modules/blocks/footer/footer.css
@@ -8,6 +8,7 @@
 
 .footer {
 	background-color: var(--red);
+	clear: both;
 	color: white;
 	padding-bottom: 1rem;
 	text-align: center;
@@ -32,5 +33,5 @@
 }
 
 .footer__contact > * {
-	line-height: 1.8;
+	line-height: 2;
 }
