--- a/src/modules/blocks/header/header.css
+++ b/src/modules/blocks/header/header.css
@@ -9,6 +9,7 @@
 .header {
 	background-color: var(--red);
 	color: white;
+	padding-bottom: 0.5rem;
 	padding-top: 1.2rem;
 	text-align: center;
 }
@@ -42,5 +43,4 @@
 	font-size: 1.1rem;
 	font-weight: normal;
 	line-height: 1.3;
-	margin-bottom: 0.9rem;
 }
