--- a/src/assets/css/shame.css
+++ b/src/assets/css/shame.css
@@ -101,6 +101,14 @@ figcaption {
 		width: 30%;
 		background: navajowhite;
 	}
+
+	.header {
+		align-items: center;
+		display: flex;
+		text-align: left;
+		justify-content: center;
+	}
+
 }
 
 /* not sure I want to use */
