--- a/src/assets/css/shame.css
+++ b/src/assets/css/shame.css
@@ -58,13 +58,13 @@ figcaption {
 }
 
 .deflist dt {
-	display: inline-block;
+	/*display: inline-block;*/
 	font-style: italic;
 	margin-right: 0.5em;
 }
 
 .deflist dd {
-	display: inline-block;
+	/*display: inline-block;*/
 }
 
 .container {
@@ -90,24 +90,56 @@ figcaption {
 	body {
 		/*font-size: 20px;*/
 	}
+
+	.container {
+		padding: 0 0.4rem 0 0.7rem;
+	}
 	.main {
 		border-bottom: none;
 		float: left;
+		padding-right: 1rem;
 		width: 70%;
-		background: yellow;
+		/*background: yellow;*/
 	}
 	.sidebar {
 		float: right;
 		width: 30%;
-		background: navajowhite;
+		/*background: navajowhite;*/
 	}
 
 	.header {
+		align-items: center;
 		display: flex;
 		text-align: left;
 		justify-content: center;
 	}
 
+	.header__logo {
+		margin-right: 1rem;
+	}
+
+	.header__desc {
+		margin-left: 0.4rem;
+	}
+
+	.nav {
+		padding-right: 6.2rem;
+	}
+
+	.deflist {}
+
+	.deflist > * {
+		display: block;
+		line-height: 1.5;
+	}
+
+	.deflist dd {
+		margin-bottom: 0.5rem;
+	}
+
+	.deflist br {
+		display: none;
+	}
 }
 
 /* not sure I want to use */
