layout for home page, using percentages for padding at medium breakpoint

--- a/src/assets/css/settings/responsive.css
+++ b/src/assets/css/settings/responsive.css
@@ -3,6 +3,9 @@
    ========================================================================== */
 
 @custom-media --medium (width >= 45em);
+@custom-media --medium-large (width >= 55em);
+@custom-media --large (width >= 65em);
+
 
 /*
 // Define custom breakpoint sizes
