--- a/src/modules/blocks/header/header.css
+++ b/src/modules/blocks/header/header.css
@@ -45,3 +45,14 @@
 	line-height: 1.3;
 }
 
+@media (--medium) {
+
+	.header__logo {
+		margin-right: 1rem;
+	}
+
+	.header__desc {
+		margin-left: 0.4rem;
+	}
+
+}
