--- a/src/modules/layout/media/media.css
+++ b/src/modules/layout/media/media.css
@@ -13,6 +13,10 @@
 	overflow: hidden;
 }
 
+.media__body {
+	margin-bottom: 1rem;
+}
+
 .lt-ie7 .media, .lt-ie7 .media__body {
 	overflow: visible;
 	zoom: 1;
