moved layout rules to their very own file

--- a/src/assets/css/settings/variables.css
+++ b/src/assets/css/settings/variables.css
@@ -13,6 +13,7 @@
   --green:      #14a93b;
   --grey_text:  #4a4a4a;
   --grey_dark:  #222;
+  --grey_light: #d7d7d7;
   --link:       #4a90e2;
   --link_visit: #61456a;
 
