--- a/src/modules/blocks/main/main.css
+++ b/src/modules/blocks/main/main.css
@@ -7,7 +7,13 @@
  */
 
 .main {
-	border-bottom: 1px solid rgb(215, 215, 215);
+	border-bottom: 1px solid var(--grey_light);
 	margin-bottom: 2rem;
 	padding-bottom: 1rem;
+}
+
+@media (--medium) {
+	.main {
+		border-bottom: none;
+	}
 }
