--- a/src/assets/css/utilities/layout.css
+++ b/src/assets/css/utilities/layout.css
@@ -47,3 +47,14 @@
 	margin: 0;
 	padding: 0;
 }
+
+/* 10% indent */
+.u-indent {
+	margin-left: 10%;
+}
+
+/* Zero margins and paddings -- ZAP! */
+.u-zero {
+	margin: 0 !important;
+	padding: 0 !important;
+}
