--- a/src/modules/blocks/root/root.css
+++ b/src/modules/blocks/root/root.css
@@ -15,6 +15,8 @@
 
 .root main {
 	flex: 1;
+	min-height: 3em;
+	padding-bottom: 3vh;
 }
 
 /* Root page link colors */
@@ -38,7 +40,7 @@
 
 .root__header {
 	background-color: var(--red);
-	margin-bottom: 4rem;
+	margin-bottom: 4vh;
 	padding: 2rem 0 1rem;
 }
 
@@ -76,6 +78,8 @@
 
 .root__footer {
 	background-color: var(--red);
+	flex: 0;
+	margin-top: 2vh;
 	padding-bottom: 2rem;
 }
 
